--- a/package.json
+++ b/package.json
@@ -1,26 +1,9 @@
 {
-  "name": "final_project_backend",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "nodemon --exec ts-node ./src/app.ts"
-  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "husky": "^8.0.3"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "@types/express": "^4.17.17"
   }
 }
