--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
